force-app/main/default/objects/Bus_Inspection_App__c/Bus_Inspection_App__c.object-meta.xml
<CustomObject>
    <description>Created by AppSheet</description>
    <label>Bus Inspection App</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Inspection Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>