force-app/main/default/objects/Bus_Inspection_App__c/fields/Bus_Picture__c.field-meta.xml
<CustomField>
    <fullName>Bus_Picture__c</fullName>
    <label>Bus Picture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>