force-app/main/default/objects/Bus_Inspection_App__c/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <label>Customer Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>