force-app/main/default/objects/Bus_Inspection_App__c/fields/Damages__c.field-meta.xml
<CustomField>
    <fullName>Damages__c</fullName>
    <description>Please list ALL damages to the bus BEFORE EVENT starts. All damages not document will be charged to the credit card on file.</description>
    <label>Damages</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>