force-app/main/default/objects/Bus_Inspection_App__c/fields/SectionDescription10__c.field-meta.xml
<CustomField>
    <fullName>SectionDescription10__c</fullName>
    <description>Capacity must NOT exceed posted amount for specific vehicle. Persons in excess of capacity will need other transportation.</description>
    <label>_SectionDescription_10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>