force-app/main/default/objects/Bus_Inspection_App__c/fields/SectionDescription7__c.field-meta.xml
<CustomField>
    <fullName>SectionDescription7__c</fullName>
    <description>1) No Smoking
2) Removal of bodily fluids
3) No standing on seats
4) No throwing of items
5) No tampering</description>
    <label>_SectionDescription_7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>