force-app/main/default/objects/Bus_Inspection_App__c/fields/SectionDescription__c.field-meta.xml
<CustomField>
    <fullName>SectionDescription__c</fullName>
    <description>Customer Information</description>
    <label>_SectionDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>