force-app/main/default/objects/Bus_Inspection_App__c/fields/SectionHeader12__c.field-meta.xml
<CustomField>
    <fullName>SectionHeader12__c</fullName>
    <description>TRIP DETAILS</description>
    <label>_SectionHeader_12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>