force-app/main/default/objects/Bus_Inspection_App__c/fields/SectionHeader6__c.field-meta.xml
<CustomField>
    <fullName>SectionHeader6__c</fullName>
    <description>RULES</description>
    <label>_SectionHeader_6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>