force-app/main/default/objects/Bus_Inspection_App__c/fields/SectionHeader9__c.field-meta.xml
<CustomField>
    <fullName>SectionHeader9__c</fullName>
    <description>CAPACITY</description>
    <label>_SectionHeader_9</label>
    <length>255</length>
    <type>Text</type>
</CustomField>